--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Pictonary</title>
+    <title>Pictionary</title>
 
     <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -18,9 +18,17 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <div class="container">
-      <h1>P I C T O N A R Y</h1>
+    <main class="container">
+      <h1>P I C T I O N A R Y</h1>
       <hr />
+      <article>
+        ¡Bienvenido a Pictionary! <br> 
+        Un juego básico donde se busca la diversión de todo el público. <br>
+        Para jugar, necesitas con que dibujar y estar dividido por equipos.
+        Luego, deberán seleccionar una categoría para que se determine al azar una palabra 
+        la cual deberá dibujar uno de los miembros del grupo para que los demás traten de adivinar de que se trata.
+      </article>
+      
       <div class="categories">
         <h2>Elegir categoría</h2>
         <div class="card-categories">
@@ -37,7 +45,7 @@
           </div>
 				</div>
       </div>
-    </div>
+    </main>
 
 		<!-- Scripts -->
 		<script src="main.js"></script>
