--- a/index.html
+++ b/index.html
@@ -36,9 +36,8 @@
             <a href="#">
               <div class="card-content">
                 <div class="card-img">
-                  <img src="" alt="a">
+                  <img src="" alt="">
                 </div>
-                <hr />
                 <div class="card-title"></div>
               </div>
             </a>
