--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Pictionary</title>
+    <title>Pictionary - Lobby</title>
 
     <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -33,7 +33,7 @@
         <h2>Elegir categoría</h2>
         <div class="card-categories">
           <div class="card">
-            <a href="#">
+            <a href="game.html" data-category="">
               <div class="card-content">
                 <div class="card-img">
                   <img src="" alt="">
