--- a/index.html
+++ b/index.html
@@ -22,13 +22,14 @@
       <h1>P I C T I O N A R Y</h1>
       <hr />
       <article>
-        ¡Bienvenido a Pictionary! <br> 
-        Un juego básico donde se busca la diversión de todo el público. <br>
+        ¡Bienvenido a Pictionary! <br />
+        Un juego básico donde se busca la diversión de todo el público. <br />
         Para jugar, necesitas con que dibujar y estar dividido por equipos.
-        Luego, deberán seleccionar una categoría para que se determine al azar una palabra 
-        la cual deberá dibujar uno de los miembros del grupo para que los demás traten de adivinar de que se trata.
+        Luego, deberán seleccionar una categoría para que se determine al azar
+        una palabra la cual deberá dibujar uno de los miembros del grupo para
+        que los demás traten de adivinar de que se trata.
       </article>
-      
+      <div class="loader"></div>
       <div class="categories">
         <h2>Elegir categoría</h2>
         <div class="card-categories">
@@ -36,17 +37,17 @@
             <a href="game.html" data-category="">
               <div class="card-content">
                 <div class="card-img">
-                  <img src="" alt="">
+                  <img src="" alt="" />
                 </div>
                 <div class="card-title"></div>
               </div>
             </a>
           </div>
-				</div>
+        </div>
       </div>
     </main>
 
-		<!-- Scripts -->
-		<script src="main.js"></script>
+    <!-- Scripts -->
+    <script src="main.js"></script>
   </body>
 </html>
