--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       </article>
       <div class="loader"></div>
       <div class="categories">
-        <h2>Elegir categoría</h2>
+        <h2>Elige una categoría</h2>
         <div class="card-categories">
           <div class="card">
             <a href="game.html" data-category="">
